Part2/manifests/deployment-logger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-data
          persistentVolumeClaim:
            claimName: devops-with-kube-pvc
      containers:
        - name: log-output-writer
          image: kaerhae/devops-with-kube-logger-writer:v0.5
          volumeMounts:
          - name: log-data
            mountPath: /usr/src/data
        
        - name: log-output-reader
          image: kaerhae/devops-with-kube-logger-reader:v0.5
          volumeMounts:
          - name: log-data
            mountPath: /usr/src/data
