Part2/manifests/deployment-pingpong.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-application
  template:
    metadata:
      labels:
        app: ping-pong-application
    spec:
      volumes:
      - name: log-data
        persistentVolumeClaim:
          claimName: devops-with-kube-pvc
      containers:
        - name: ping-pong-application
          image: kaerhae/devops-with-kube-pingpong-app:v0.2
          volumeMounts:
          - name: log-data
            mountPath: /usr/src/data
