Part2/manifests/deployment-todo-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
      - name: todo-data
        persistentVolumeClaim:
          claimName: devops-with-kube-pvc
      containers:
        - name: todo-app
          image: kaerhae/devops-with-kube-todo-app:v0.0.5
          volumeMounts:
          - name: todo-data
            mountPath: /usr/src/data
