Part2/manifests/deployment-todo-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: kaerhae/devops-with-kube-todo-backend:v0.0.1
          imagePullPolicy: Always
