Part2/manifests/service-logger.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 8888
