Part2/manifests/service-pingpong.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-application-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-application
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8889
