Part2/manifests/service-todo-app.yml
# Exercise 1.06: Project v0.4
#
# apiVersion: v1
# kind: Service
# metadata:
#   name: todo-app-svc
# spec:
#   type: NodePort
#   selector:
#     app: todo-app
#   ports:
#     - name: http
#       nodePort: 30080
#       protocol: TCP
#       port: 1234
#       targetPort: 9000


#
# Exercise 1.08: Project v0.5 
#
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 9000
