Part2/manifests/service-todo-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2344
      protocol: TCP
      targetPort: 9090
