Part2/manifests/ingress-logger-pingpong.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-with-kube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /pingpong
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-application-svc
            port:
              number: 2347
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2346
