Part2/manifests/ingress-todo-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-with-kube-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2345
